fixed height issue on mobile ios
removed height 100vh on main

--- a/output.css
+++ b/output.css
@@ -82,8 +82,6 @@ body {
 }
 
 main {
-  width: 100vw;
-  height: 100vh;
   display: grid;
   justify-content: center;
   align-content: center;
@@ -200,7 +198,7 @@ nav {
 .nav-planets {
   position: fixed;
   right: 0;
-  margin-top: 136px;
+  margin-top: 130px;
   width: 100%;
   background-color: var(--neutral500);
   transition: transform 300ms cubic-bezier(0.5, 0, 0.5, 1);
@@ -280,7 +278,7 @@ nav {
 }
 
 .planet-image__wrapper {
-  margin-top: 200px;
+  margin-top: 150px;
 }
 @media (min-width: 40em) {
   .planet-image__wrapper {
@@ -384,7 +382,7 @@ nav {
   line-height: 22px;
 }
 .planet-info p {
-  font-size: clamp(9px, 2vw, 14px);
+  font-size: clamp(11px, 2vw, 14px);
 }
 
 .planet-title {
