--- a/styles/_primary.scss
+++ b/styles/_primary.scss
@@ -14,8 +14,7 @@ body {
 }
 
 main {
-    width: 100vw;
-    height: 100vh;
+
     display: grid;
     justify-content: center;
     align-content: center;
